--- a/config/setting.ini
+++ b/config/setting.ini
@@ -1,12 +1,12 @@
 [default]
 # 启动哪个平台,现在有3种，分别为android|ios|web
-platform=web
+platform=android
 # 是否发送邮件支持true,false
 mail_enable=false
 # false|true 表示是否运行用例之前，删除log文件夹，删除后会影响查看历史报告
 remove_log=true
 # false|true 是否开启录屏,若传true就会自动录屏，但是在模拟器上录屏失败，只使用于真机
-recording=true
+recording=
 # 服务器信的信息，比如本地的ip，用来展示报告
 report_host=127.0.0.1
 # 服务器信的信息的端口
